--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
 
     <!-- Include Flatiron School's minified test runner to push results to Learn. -->
     <script src="node_modules/learn-browser/learnBrowser.min.js"></script>
+    <script>
+      document.body.addEventListener('keydown', (event) => {
+        
+      )}
+    </script>
   </body>
 </html>
